<resources>
    <string name="app_name">还记得吗</string>
    <string name="loading_toast">别急！记得正在同步你的状态呢</string>
    <string name="not_login">未登录</string>
    <string name="home_login_hint">登录同步云端数据，永不丢失</string>
    <string name="setting_privacy">隐私设置</string>
    <string name="setting_version">当前版本</string>
    <string name="setting_userinfo">用户信息</string>
    <string name="login">登录</string>
    <string name="null_memory">点击添加一个记得</string>
    <string name="text_distance_today">就在</string>
    <string name="text_day">天</string>
    <string name="add_memory_title">添加记得</string>
    <string name="add_memory_title_text">记得名</string>
    <string name="please_edit">请输入</string>
    <string name="add_memory_date_text">日期</string>
    <string name="add_memory_repeat_text">重复</string>
    <string name="add_memory_remind_time_text">提醒时间</string>
    <string name="add_memory_if_remind_text">日历提醒</string>
    <string name="add_memory_care_text">最关心</string>
    <string name="add_memory_bg_text">背景图片</string>
    <string name="add_memory_content_text">内容</string>
    <string name="remember_what">你想让记得记得什么呢</string>
    <string name="perDialog">记得想告诉你</string>
    <string name="cancel">取消</string>
    <string name="submit">提交</string>
    <string name="adding">添加中</string>
</resources>