<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/p_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.04"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/cl_user_info_bar"
        android:background="@color/white"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintTop_toBottomOf="@+id/p_bar">

        <org.raphets.roundimageview.RoundImageView
            android:id="@+id/iv_user_icon"
            android:src="@mipmap/icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:type="circle"
            android:layout_marginLeft="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:maxLength="8"
            android:text="@string/not_login"
            android:textSize="14sp"
            android:textColor="@color/_333333"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/iv_user_icon"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/cl_user_info_bar"
        app:layout_constraintHeight_percent="0.89">
        <androidx.viewpager.widget.ViewPager
            android:id="@+id/vp_memory_home"
            android:background="@color/white"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:visibility="gone"
            android:id="@+id/cl_setting_view_background"
            android:background="@color/half_trans"
            android:layout_height="match_parent"/>
        <Button
            android:id="@+id/bt_bottom_add"
            android:layout_width="60dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@mipmap/icon_button_add"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="30dp"
            android:layout_height="60dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_setting_view"
        android:layout_width="match_parent"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/cl_user_info_bar"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="#00000000"
        app:layout_constraintHeight_percent="0.89"
        android:layout_height="0dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            app:layout_constraintWidth_percent="0.35"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/cl_setting_view_click_area"
            android:layout_height="match_parent"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/cl_setting_view_left"
            android:layout_width="0dp"
            android:background="@color/white"
            app:layout_constraintWidth_percent="0.65"
            android:layout_height="match_parent">
            <TextView
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginLeft="20dp"
                android:textSize="14sp"
                android:id="@+id/tv_home_login_hint"
                android:text="@string/home_login_hint"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="30dp"
                android:textColor="@color/_999999"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="130dp"
                android:paddingVertical="10dp"
                android:id="@+id/cl_home_setting_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.ConstraintLayout
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/iv_home_setting_icon_privacy"
                        android:layout_width="30dp"
                        android:src="@mipmap/icon_privacy"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_height="30dp"/>
                    <TextView
                        android:layout_marginLeft="20dp"
                        android:text="@string/setting_privacy"
                        app:layout_constraintLeft_toRightOf="@+id/iv_home_setting_icon_privacy"
                        android:layout_width="wrap_content"
                        android:textColor="@color/_333333"
                        android:textSize="15sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_height="wrap_content"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="10dp"
                android:paddingVertical="10dp"
                android:id="@+id/cl_home_setting_version"
                app:layout_constraintTop_toBottomOf="@+id/cl_home_setting_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.ConstraintLayout
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="25dp"
                    android:id="@+id/cl_home_setting_privacy_container"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/iv_home_setting_icon_version"
                        android:layout_width="30dp"
                        android:src="@mipmap/icon_version"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_height="30dp"/>
                    <TextView
                        android:layout_marginLeft="20dp"
                        android:text="@string/setting_version"
                        app:layout_constraintLeft_toRightOf="@+id/iv_home_setting_icon_version"
                        android:layout_width="wrap_content"
                        android:textColor="@color/_333333"
                        android:textSize="15sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_height="wrap_content"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <TextView
                    android:layout_width="wrap_content"
                    android:textSize="10sp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginRight="10dp"
                    android:text="1.2.0.110"
                    android:id="@+id/tv_version"
                    android:textColor="@color/_999999"
                    app:layout_constraintTop_toTopOf="@+id/cl_home_setting_privacy_container"
                    app:layout_constraintBottom_toBottomOf="@+id/cl_home_setting_privacy_container"
                    android:layout_height="wrap_content"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="10dp"
                android:paddingVertical="10dp"
                android:visibility="gone"
                android:id="@+id/cl_home_setting_user_info"
                app:layout_constraintTop_toBottomOf="@+id/cl_home_setting_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.ConstraintLayout
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginLeft="25dp"
                    android:id="@+id/cl_home_setting_user_info_container"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/iv_home_setting_icon_user_info"
                        android:layout_width="30dp"
                        android:src="@mipmap/icon_userinfo"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_height="30dp"/>
                    <TextView
                        android:layout_marginLeft="20dp"
                        android:text="@string/setting_userinfo"
                        app:layout_constraintLeft_toRightOf="@+id/iv_home_setting_icon_user_info"
                        android:layout_width="wrap_content"
                        android:textColor="@color/_333333"
                        android:textSize="15sp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:layout_height="wrap_content"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <TextView
                android:id="@+id/tv_login"
                android:textColor="@color/_0099ff"
                android:text="@string/login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@+id/cl_home_setting_user_info"
                android:textSize="25sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>