<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="60dp"
        app:cardCornerRadius="@dimen/cardview_radius"
        app:cardElevation="10dp"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_height="match_parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_memory_top_content"
                android:layout_width="match_parent"
                android:paddingRight="15dp"
                android:paddingLeft="20dp"
                android:paddingVertical="30dp"
                android:background="@color/_0099ff"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/tv_memory_title"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:singleLine="true"
                    android:layout_marginTop="20dp"
                    android:text="我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textStyle="bold"
                    android:id="@+id/tv_day_distance_hint"
                    app:layout_constraintTop_toBottomOf="@+id/tv_memory_title"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:text="@string/text_distance_today"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <View
                    app:layout_constraintLeft_toLeftOf="@+id/ll_day_distance"
                    app:layout_constraintRight_toRightOf="@+id/ll_day_distance"
                    android:layout_width="0dp"
                    android:id="@+id/view_line"
                    android:layout_marginTop="20dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_day_distance_hint"
                    android:background="@color/white"
                    android:layout_height="2dp"/>
                <LinearLayout
                    app:layout_constraintTop_toBottomOf="@+id/view_line"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:id="@+id/ll_day_distance"
                    android:layout_marginTop="20dp"
                    android:paddingVertical="7dp"
                    android:paddingHorizontal="5dp"
                    android:background="@drawable/reshape_white_lefttop_rigntbottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <TextView
                        android:textSize="20sp"
                        android:textColor="@color/_0099ff"
                        android:textStyle="bold"
                        android:text="今"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                    <TextView
                        android:textSize="15sp"
                        android:textColor="@color/_0099ff"
                        android:textStyle="bold"
                        android:text="@string/text_day"
                        android:gravity="bottom"
                        android:layout_marginLeft="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:paddingHorizontal="25dp"
                android:paddingVertical="20dp"
                app:layout_constraintTop_toBottomOf="@+id/cl_memory_top_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/text_memory_day_in_week"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textColor="@color/_999999"
                    android:text="周五"
                    android:textSize="12sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/text_memory_day_in_week"
                    android:layout_marginRight="15dp"
                    android:textColor="@color/_333333"
                    android:textSize="12sp"
                    android:id="@+id/text_memory_day_in_year"
                    android:text="2021.09.09"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginTop="30dp"
                    android:textSize="15sp"
                    android:textColor="@color/_333333"
                    android:text="我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你我爱你"
                    android:id="@+id/text_memory_content"
                    app:layout_constraintTop_toBottomOf="@id/text_memory_day_in_week"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        android:id="@+id/cl_null_memory_add"
        android:paddingVertical="10dp"
        android:paddingHorizontal="15dp"
        android:background="@drawable/border_blue_raduis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:id="@+id/icon_puls"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@mipmap/icon_plus"/>
        <TextView
            app:layout_constraintLeft_toRightOf="@+id/icon_puls"
            android:textSize="14sp"
            android:textColor="@color/_666666"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/null_memory"
            android:layout_marginLeft="3dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>